--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "fastapi==0.115.12",
     "numpy<2",
     "pydantic>=2.11.5",
+    "pydantic-settings>=2.9.1",
     "uvicorn[standard]>=0.34.3",
 ]
