--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==3.10
 numpy==1.26.4
 pydantic==2.11.5
 pydantic-core==2.33.2
+pydantic-settings==2.9.1
 python-dotenv==1.1.0
 pyyaml==6.0.2
 sniffio==1.3.1
