--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
+dotenv==0.9.9
 fastapi==0.115.12
 gitdb==4.0.12
 gitpython==3.1.44
