--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,19 @@
 services:
   backend:
     build:
-      context: .
-      dockerfile: ./app/Dockerfile
-    container_name: rice_backend
+      context: ./app
+      dockerfile: Dockerfile
+    container_name: MD_Backend
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
-    environment:
-      - BACKEND_API_URL=http://backend:8000
 
   frontend:
     build:
-      context: .
-      dockerfile: ./frontend/Dockerfile
-    container_name: rice_frontend
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: MD_Frontend
     ports:
       - "8501:8501"
-    volumes:
-      - .:/frontend
     environment:
       - BACKEND_API_URL=http://backend:8000
     depends_on:
