--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,15 @@
-FROM pytorch/pytorch
+FROM python:3.12.11-slim-bookworm
 
 WORKDIR /app
 
-COPY . .
+COPY requirements.txt .
+
+RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY . .
+
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "main.py"]   
