--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -5,9 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiohttp>=3.12.13",
     "fastapi>=0.115.14",
+    "joblib>=1.5.1",
     "numpy>=2.3.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "requests>=2.32.4",
+    "scikit-learn==1.6.1",
     "uvicorn>=0.34.3",
 ]
