--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,13 +1,20 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 fastapi==0.115.14
+frozenlist==1.7.0
 h11==0.16.0
 idna==3.10
 joblib==1.5.1
+multidict==6.6.3
 numpy==2.3.1
+propcache==0.3.2
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-settings==2.10.1
@@ -22,3 +29,4 @@ typing-extensions==4.14.0
 typing-inspection==0.4.1
 urllib3==2.5.0
 uvicorn==0.34.3
+yarl==1.20.1
