feat: feedback in animal classifier.
- Animal Classifier has a feedback system that takes the feedback and
save it in csv for future.
- Improvement in validation of payload using pydantic in routes.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
     restart: unless-stopped
     networks:
       - md_network
+    volumes:
+      - ./app:/app
 
   frontend:
     build:
@@ -24,6 +26,8 @@ services:
     restart: unless-stopped
     networks:
       - md_network
+    volumes:
+      - ./frontend:/frontend
 
 networks:
   md_network:
