--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pandas>=2.3.0",
+    "pillow>=11.2.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "streamlit>=1.46.1",
